fixed gap insteat margin-right

--- a/css/styles.css
+++ b/css/styles.css
@@ -500,14 +500,15 @@ body {
   margin-left: 120px;
 }
 .footer-social-list {
+  gap:16px;
   display: flex;
 }
+ 
 .footer-social-item {
   display: flex;
   justify-items: center;
   width: 40px;
   height: 40px;
-  margin-right: 16px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 }
